--- a/src/components/redes/redes.scss
+++ b/src/components/redes/redes.scss
@@ -63,7 +63,7 @@
 			}
 			.close-modal{
 				position: absolute;
-				margin-top: -30px;
+				top: 20px;
 				right: 20px;
 				cursor: pointer;
 			}
@@ -80,8 +80,12 @@
 		width: 98% !important;
 		left: 1% !important;
 		.uzi-modal-head{
+			padding-top: 16px !important;
 			.uzi-modal-title{
-				text-align: left;
+				padding-left: 10px;
+				font-size: 20px !important;
+				text-align: left !important;
+
 			}
 		}
 	}
