--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import url("https://use.fontawesome.com/releases/v5.5.0/css/all.css");
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One');
 @import 'assets/sass/_variables';
 .hidden-appearance {
 	opacity: 0;
