--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -38,6 +38,7 @@
 	box-shadow: 0px 0px 1px #fff !important;
 	.navbar-brand{
 		div.navbar-item{
+			font-family: 'Fredoka One', cursive;
 			cursor: pointer;
 			transition: all 0.3s;
 			a{
