--- a/src/components/landing-hero/landing-hero.scss
+++ b/src/components/landing-hero/landing-hero.scss
@@ -42,7 +42,7 @@
 				padding-bottom: 20px;
 			}
 			.brandLogo{
-				width: 100px;
+				width: 300px 
 			}
 			.i-want-subscribe{
 				background-color: $azul;
