--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -1,15 +1,31 @@
 @import '../../assets/sass/_variables';
 
-
-
-.team .founder{
-	border-radius: 5px;
-	padding: 20px;
-	box-shadow: 0px 0px 1px grey;
-	.name{
-		font-size: 24px;
+.founder {
+	// border: 1px solid red;
+	width: 210px;
+	padding: 10px;
+	&:hover{
+		transform: scale(1.1);
+		animation: cubic-bezier(ease-out)
 	}
-	.description{
-		font-size: 18px;		
-	}
+}
+// .title{
+// 	font-weight: 800;
+// 	color: $naranja;
+// }
+.founder a {
+	color: $naranja;
+	font-weight: 800;
+	font-size: 18px;
+}
+.avatar-img {
+	display: block;
+    height: auto;
+	width: 500px;
+}
+.founders {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 80px;
 }
