--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,10 @@
 @import '../../assets/sass/_variables';
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One');
 @media screen and (max-width: 1000px)
 {
+	body {
+		background-color: #423A74;
+	}
 	.navbar{
 		padding-left: 0px !important;
 		.navbar-brand{
@@ -11,7 +15,7 @@
 				transition: 0.3s;
 				height: 50px;
 				&:hover{
-					background-color: rgb(250,250,250);
+					// background-color: rgb(250,250,250);
 					transition: 0.3s;
 				}
 			}
@@ -24,29 +28,46 @@
 			text-align: center;
 			.navbar-item{
 				padding: 10px 10px 10px 10px !important;
-				&:hover{
-					background-color: rgb(250,250,250) !important;
-				}
 			}
 		}
 	}
 }
+.navbar .navbar-menu .navbar-item {
+	color: #fff;
+	padding: 20px;
+	&:hover{
+		a{
+			color: $naranja;
+		}
+	}
+}
+.button.is-active {
+	background: #423A74;
+}
+.uzbrand {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.uzbrand img {
+	width: 50px;
+}
 .navbar{
-	background-color: rgb(255,255,255) !important;
-	padding-left: 14px;
+	background-color: #423A74;
+	color: #fff;
+	padding-left: 24px;
 	height: 70px;
-	box-shadow: 0px 0px 1px #fff !important;
 	.navbar-brand{
 		div.navbar-item{
 			font-family: 'Fredoka One', cursive;
+			font-weight: 400;
 			cursor: pointer;
 			transition: all 0.3s;
 			a{
 				transition: 0.3s;
+				color: #fff;
 			}
 			&:hover{
-				transition: 0.3s;
-				transform: translateY(-3px);
 				a{
 					transition: all 0.3s;
 					color: $naranja;
@@ -55,20 +76,24 @@
 		}
 
 	}
+	.navbar-end {
+
+	}
 	.navbar-menu{
 		padding-right: 15px;
-
 		.navbar-item{
+			img {
+				width: 70px;
+				height: 70px;
+			}
 			transition: 0.3s;
-			padding: 5px 30px 0px 30px;
+			// padding: 5px 20px 0px 20px;
 			font-size: 18px;		
 			&:hover{
 				transition: 0.3s;
-				background-color: #fff;
-
+				background: none;
 				color: $naranja;
-				.navbar-link{
-					background-color: #fff;
+				a{
 					color: $naranja;
 				}
 			}
