--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -5,6 +5,9 @@
 	body {
 		background-color: #423A74;
 	}
+	.options {
+		color: #0000;;
+	}
 	.navbar{
 		padding-left: 0px !important;
 		.navbar-brand{
@@ -14,6 +17,7 @@
 				border-radius: 5px;
 				transition: 0.3s;
 				height: 50px;
+				color: #fff;
 				&:hover{
 					// background-color: rgb(250,250,250);
 					transition: 0.3s;
@@ -23,12 +27,19 @@
 				padding-top: 15px;
 			}
 		}
+		.navbar-item {
+			color: #423A74;
+		}
 		.navbar-menu{
 			padding-right: 0px !important;
 			text-align: center;
 			.navbar-item{
 				padding: 10px 10px 10px 10px !important;
+				color: #423A74;
 			}
+		}
+		.navbar .navbar-menu .navbar-item {
+			color: #423A74
 		}
 	}
 }
